# easy-appointments-client

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: booking_lifecycle_requests.py  sample-curls.txt
easyappointments/: __init__.py  client.py  exceptions.py
easyappointments/api/: __init__.py  admins.py  appointments.py  availabilities.py  base.py  customers.py  providers.py
easyappointments/models/: __init__.py  admin.py  appointment.py  availability.py  customer.py  paginated_response.py  provider.py
examples/: basic_usage.py
tests/: __init__.py  test_e2e.py
